--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -21,7 +21,16 @@
             </tr>
         </table>
     </form>
+
+    <h2>上传文件至FTP服务器</h2>
+    <form action="" method="post" enctype="multipart/form-data" id="upload">
+        <input type="file" id="photo" name="photo" />
+        <input type="button" id="hpbtn" value="上传" />
+    </form>
+
+
 <script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="/js/ajaxfileupload.js"></script>
 <script type="text/javascript">
     $(function () {
 
@@ -44,6 +53,29 @@
             },"json");
 
         });
+
+        //上传文件
+        $("#hpbtn").click(function(){
+            //上传文件
+            $.ajaxFileUpload({
+
+                //用于文件上传的服务器端请求地址
+                url: '/testUploadFile.do',
+                //是否启用安全提交,一般设置为false
+                secureuri: false,
+                //文件上传空间的id属性  <input type="file" id="file" name="file" />
+                fileElementId: 'photo',
+                //返回值类型 一般设置为json
+                dataType: 'json',
+                //异步
+                async: true,
+                //服务器成功响应处理函数
+                success:function (data) {
+                    console.log(data.msg);
+                }
+            });
+        });
+
     });
 </script>
 </body>
